// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify view renderer tests should generate a non-datastore table element 1`] = `
"<Table>
  {!disableHeaders && (
    <TableHead>
      <TableRow>
        <TableCell as=\\"th\\">name</TableCell>
        <TableCell as=\\"th\\">age</TableCell>
        <TableCell as=\\"th\\">address</TableCell>
        <TableCell as=\\"th\\">birthday</TableCell>
      </TableRow>
    </TableHead>
  )}
  <TableBody>
    {items.map((item, index) => (
      <TableRow onClick={onRowClick ? () => onRowClick(item, index) : null}>
        <TableCell>
          {format?.name ? format.name(item?.name) : item?.name}
        </TableCell>
        <TableCell>{format?.age ? format.age(item?.age) : item?.age}</TableCell>
        <TableCell>
          {format?.address ? format.address(item?.address) : item?.address}
        </TableCell>
        <TableCell>
          {format?.birthday ? format.birthday(item?.birthday) : item?.birthday}
        </TableCell>
      </TableRow>
    ))}
  </TableBody>
</Table>;
"
`;

exports[`amplify view renderer tests should generate a table element 1`] = `
"<Table>
  {!disableHeaders && (
    <TableHead>
      <TableRow>
        <TableCell as=\\"th\\">hireDate</TableCell>
        <TableCell as=\\"th\\">comments</TableCell>
        <TableCell as=\\"th\\">createdAt</TableCell>
        <TableCell as=\\"th\\">updatedAt</TableCell>
      </TableRow>
    </TableHead>
  )}
  <TableBody>
    {items.map((item, index) => (
      <TableRow onClick={onRowClick ? () => onRowClick(item, index) : null}>
        <TableCell>
          {format?.hireDate
            ? format.hireDate(item?.hireDate)
            : formatter(item?.hireDate, {
                type: \\"DateTimeFormat\\",
                format: {
                  dateTimeFormat: {
                    dateFormat: \\"locale\\",
                    timeFormat: \\"hours24\\",
                  },
                },
              })}
        </TableCell>
        <TableCell>
          {format?.comments ? format.comments(item?.comments) : item?.comments}
        </TableCell>
        <TableCell>
          {format?.createdAt
            ? format.createdAt(item?.createdAt)
            : item?.createdAt}
        </TableCell>
        <TableCell>
          {format?.updatedAt
            ? format.updatedAt(item?.updatedAt)
            : item?.updatedAt}
        </TableCell>
      </TableRow>
    ))}
  </TableBody>
</Table>;
"
`;
